# auv_controllers

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yml  README.md
.github/ISSUE_TEMPLATE/: config.yml  documentation.yml
.github/workflows/: ci.yml  format.yml
auv_controllers/: CMakeLists.txt  package.xml
velocity_controllers/: CMakeLists.txt  package.xml  velocity_controllers_plugins.xml
velocity_controllers/include/velocity_controllers/: integral_sliding_mode_control.hpp  integral_sliding_mode_controller.hpp  visibility_control.h
velocity_controllers/src/: integral_sliding_mode_controller.cpp
